Fix galleries#edit spacing issues

--- a/app/assets/stylesheets/galleries.scss
+++ b/app/assets/stylesheets/galleries.scss
@@ -24,6 +24,7 @@
   word-wrap: break-word;
   vertical-align: top;
 }
+.gallery-icon-editor input, .gallery-editor #gallery_name { height: 23px; }
 
 /* Tiny buttons that hover over icons to allow deleting or selecting a checkbox for editing */
 .delete-button, .select-button {
